--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,33 @@
     <title>TP-4-Heroes</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <h2>Home</h2>
+    
+    <div >
+        <h1>Heroes</h1>
+        <ul type="none">
+            <!--  <li><a href="/index">Home</a></li>  -->
+            <li><a href="/babbage">Babbage</a></li>
+            <li><a href="/berners-lee">Berners-Lee</a></li>
+            <li><a href="/clarke">Clarke</a></li>
+            <li><a href="/hamilton">Hamilton</a></li>
+            <li><a href="/hopper">Hopper</a></li>
+            <li><a href="/lovelace">Lovelace</a></li>
+            <li><a href="/turing">Turing</a></li>
+        </ul>
+    </div>
+    <br><br>
+    <div>
+        <a href="/babbage"><img src="img/babbage.jpg" alt=""></a>
+        <a href="/clarke"><img src="img/clarke.jpg" alt=""></a>
+        <a href="/hamilton"><img src="img/hamilton.jpg" alt=""></a>
+        <a href="/hopper"><img src="img/hopper.jpg" alt=""></a>
+        <a href="/lovelace"><img src="img/lovelace.jpg" alt=""></a>
+        <a href="/berners-lee"><img src="img/berners-lee.jpg" alt=""></a>
+        <a href="/turing"><img src="img/turing.jpg" alt=""></a>
+    </div>
+
 </body>
+
 </html>
