--- a/views/lovelace.html
+++ b/views/lovelace.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP-4-Heroes</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+
+    <a href="/index">Volver</a>
+
     <h2>Lovelace</h2>
+
+    <img src="img/lovelace.jpg" alt="">
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus quis aspernatur eveniet placeat, fugiat quas
+        aperiam, dicta asperiores, magni dolor dolore harum voluptates delectus voluptatem! Reprehenderit, doloribus
+        maiores! Consequatur?
+    </p>
 </body>
+
 </html>
