--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,10 @@
+body{
+    font-family: Calibri, Segoe UI , sans-serif ;
+    background-color: rgba(187, 179, 179, 0.5);
+}
 
+h1 {
+    text-align: center;
+    color:rgb(61, 4, 61)
+}
 
