--- a/views/clarke.html
+++ b/views/clarke.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP-4-Heroes</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+    <a href="/index">Volver</a>
+
     <h2>Clarke</h2>
+    
+    <img src="img/clarke.jpg" alt="">
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus quis aspernatur eveniet placeat, fugiat quas
+        aperiam, dicta asperiores, magni dolor dolore harum voluptates delectus voluptatem! Reprehenderit, doloribus
+        maiores! Consequatur?
+    </p>
 </body>
 </html>
